# pytemplator

./: .buildinfo  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytemplator.html  readme.html  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html
.github/workflows/: python-publish.yml  python_package.yml
_modules/: index.html
_modules/pytemplator/: cli.html  pytemplator.html  utils.html
_sources/: index.rst.txt
_static/: documentation_options.js
docs/: Makefile  conf.py  installation.rst  make.bat  modules.rst  pytemplator.rst  usage.rst
src/pytemplator/: __init__.py  cli.py  constants.py  exceptions.py  pytemplator.py  utils.py
src/pytemplator/tests/: test_pytemplator.py  test_utils.py  utils.py
src/pytemplator/tests/fixtures/test_template/templates/: {{pytemplator.main_folder_name}}
src/pytemplator/tests/fixtures/test_template_2/: finalize.py  initialize.py
src/pytemplator/tests/fixtures/test_template_2/{{ main_folder_name }}_2/: {{ pytemplator.second_file }}
tests/: __init__.py  test_pytemplator.py  test_utils.py  utils.py
tests/fixtures/expected_test_template_1_result/: .pytemplator.yml  test1
tests/fixtures/expected_test_template_2_result/: .pytemplator.yml
tests/fixtures/expected_test_template_4_result/: .pytemplator.yml
tests/fixtures/expected_test_template_4_result/Directory_2/: file2
tests/fixtures/test_template_1/: initialize.py
tests/fixtures/test_template_1/templates/: {{pytemplator.main_file_name}}
tests/fixtures/test_template_2/: finalize.py  initialize.py
tests/fixtures/test_template_2/{{pytemplator.main_folder_name}}/: test1
tests/fixtures/test_template_3/: cookiecutter.json  initialize.py
tests/fixtures/test_template_4/: cookiecutter.json
tests/fixtures/test_template_5/: initialize.py
