[tool.poetry]
name = "pytemplator"
version = "0.1.0a2"
description = "Pytemplator aims to streamline the creation of dynamic templates. It is inspired from the excellent CookieCutter package but offers more flexibility."
authors = ["Arnaud Blois <hi@arnaudblois.com>"]
license = "Apache-2.0"
readme = "README.rst"
include = ["AUTHORS.rst", "CONTRIBUTING.rst", "HISTORY.rst", "LICENSE", "README.rst"]

keywords = ["packaging", "template", "templating", "boilerplate", "cookiecutter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.0.3"
loguru = "^0.6.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pylint-runner = "^0.6.0"
sphinx-rtd-theme = "^1.0.0"
python-lsp-server = {extras = ["all"], version = "^1.2.2"}
black = "^22.1.0"
pylint = "^2.12.2"
pre-commit = "^2.17.0"
rstcheck = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytemplate = 'pytemplator.cli:main'

[tool.isort]
profile = "black"
